--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "sort-ii",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "node app.js",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cli": "~7.3.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
@@ -22,10 +25,13 @@
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
     "file-saver": "^2.0.2",
     "ngx-toastr": "^10.1.0",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "typescript": "~3.2.2",
     "xlsx": "^0.15.3",
     "zone.js": "~0.8.26"
   },
@@ -38,6 +44,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
@@ -50,5 +57,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "10.15.1",
+    "npm": "6.4.1"
   }
 }
