--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.13.0",
     "@angular/animations": "~7.2.0",
     "@angular/cli": "~7.3.0",
     "@angular/common": "~7.2.0",
